parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> START statement_list END
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> empty
Rule 4     statement -> var_decl
Rule 5     statement -> assign_stmt
Rule 6     statement -> print_stmt
Rule 7     statement -> if_stmt
Rule 8     statement -> loop_stmt
Rule 9     statement -> func_def
Rule 10    statement -> list_decl
Rule 11    statement -> list_add
Rule 12    statement -> list_remove
Rule 13    statement -> return_stmt
Rule 14    statement -> function_call
Rule 15    statement -> input_call
Rule 16    var_decl -> type IDENTIFIER assign_opt
Rule 17    var_decl -> type IDENTIFIER ASSIGN error
Rule 18    type -> INT_TYPE
Rule 19    type -> FLOAT_TYPE
Rule 20    type -> TEXT_TYPE
Rule 21    type -> CHAR_TYPE
Rule 22    type -> BOOL_TYPE
Rule 23    assign_opt -> ASSIGN expr
Rule 24    assign_opt -> empty
Rule 25    assign_stmt -> IDENTIFIER ASSIGN expr
Rule 26    assign_stmt -> IDENTIFIER ASSIGN error
Rule 27    print_stmt -> PRINT LPAREN print_items RPAREN
Rule 28    print_stmt -> PRINT error
Rule 29    print_items -> expr print_tail
Rule 30    print_items -> empty
Rule 31    print_tail -> COMMA expr print_tail
Rule 32    print_tail -> empty
Rule 33    expr -> expr PLUS term
Rule 34    expr -> expr MINUS term
Rule 35    expr -> term
Rule 36    term -> term MULTIPLY factor
Rule 37    term -> term DIVIDE factor
Rule 38    term -> term MODULO factor
Rule 39    term -> factor
Rule 40    factor -> INTEGER
Rule 41    factor -> FLOAT_NUMBER
Rule 42    factor -> STRING
Rule 43    factor -> TRUE
Rule 44    factor -> FALSE
Rule 45    factor -> IDENTIFIER
Rule 46    factor -> list_access
Rule 47    factor -> function_call
Rule 48    factor -> input_call
Rule 49    factor -> LPAREN expr RPAREN
Rule 50    factor -> LPAREN error RPAREN
Rule 51    input_call -> INPUT LPAREN print_items RPAREN
Rule 52    if_stmt -> IF condition THEN statement_list else_part BLOCK_END
Rule 53    if_stmt -> IF error BLOCK_END
Rule 54    else_part -> ELSE statement_list
Rule 55    else_part -> empty
Rule 56    condition -> condition AND condition
Rule 57    condition -> condition OR condition
Rule 58    condition -> NOT condition
Rule 59    condition -> LPAREN condition RPAREN
Rule 60    condition -> expr relation expr
Rule 61    condition -> error
Rule 62    relation -> GREATER
Rule 63    relation -> LESS
Rule 64    relation -> GREATER_EQUAL
Rule 65    relation -> LESS_EQUAL
Rule 66    relation -> EQUAL
Rule 67    relation -> NOT_EQUAL
Rule 68    loop_stmt -> FOR IDENTIFIER ASSIGN expr FROM expr TO statement_list BLOCK_END
Rule 69    loop_stmt -> WHILE condition statement_list BLOCK_END
Rule 70    loop_stmt -> FOR statement_list WHILE condition BLOCK_END
Rule 71    loop_stmt -> FOR error BLOCK_END
Rule 72    loop_stmt -> WHILE error BLOCK_END
Rule 73    func_def -> FUNCTION IDENTIFIER LPAREN param_list RPAREN statement_list BLOCK_END
Rule 74    func_def -> FUNCTION error BLOCK_END
Rule 75    param_list -> IDENTIFIER param_tail
Rule 76    param_list -> empty
Rule 77    param_tail -> COMMA IDENTIFIER param_tail
Rule 78    param_tail -> empty
Rule 79    return_stmt -> RETURN expr
Rule 80    function_call -> IDENTIFIER LPAREN arg_list RPAREN
Rule 81    arg_list -> expr arg_tail
Rule 82    arg_list -> empty
Rule 83    arg_tail -> COMMA expr arg_tail
Rule 84    arg_tail -> empty
Rule 85    list_decl -> LIST IDENTIFIER ASSIGN LBRACKET list_items RBRACKET
Rule 86    list_decl -> LIST IDENTIFIER ASSIGN LBRACKET error RBRACKET
Rule 87    list_items -> expr list_tail
Rule 88    list_items -> empty
Rule 89    list_tail -> COMMA expr list_tail
Rule 90    list_tail -> empty
Rule 91    list_access -> IDENTIFIER LBRACKET expr RBRACKET
Rule 92    list_add -> ADD IDENTIFIER expr
Rule 93    list_remove -> REMOVE IDENTIFIER expr
Rule 94    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 92
AND                  : 56
ASSIGN               : 17 23 25 26 68 85 86
BLOCK_END            : 52 53 68 69 70 71 72 73 74
BOOL_TYPE            : 22
CHAR_TYPE            : 21
COMMA                : 31 77 83 89
DIVIDE               : 37
ELSE                 : 54
END                  : 1
EQUAL                : 66
FALSE                : 44
FLOAT_NUMBER         : 41
FLOAT_TYPE           : 19
FOR                  : 68 70 71
FROM                 : 68
FUNCTION             : 73 74
GREATER              : 62
GREATER_EQUAL        : 64
IDENTIFIER           : 16 17 25 26 45 68 73 75 77 80 85 86 91 92 93
IF                   : 52 53
INPUT                : 51
INTEGER              : 40
INT_TYPE             : 18
LBRACKET             : 85 86 91
LESS                 : 63
LESS_EQUAL           : 65
LIST                 : 85 86
LPAREN               : 27 49 50 51 59 73 80
MINUS                : 34
MODULO               : 38
MULTIPLY             : 36
NOT                  : 58
NOT_EQUAL            : 67
OR                   : 57
PLUS                 : 33
PRINT                : 27 28
RBRACKET             : 85 86 91
REMOVE               : 93
RETURN               : 79
RPAREN               : 27 49 50 51 59 73 80
START                : 1
STRING               : 42
TEXT_TYPE            : 20
THEN                 : 52
TO                   : 68
TRUE                 : 43
WHILE                : 69 70 72
error                : 17 26 28 50 53 61 71 72 74 86

Nonterminals, with rules where they appear

arg_list             : 80
arg_tail             : 81 83
assign_opt           : 16
assign_stmt          : 5
condition            : 52 56 56 57 57 58 59 69 70
else_part            : 52
empty                : 3 24 30 32 55 76 78 82 84 88 90
expr                 : 23 25 29 31 33 34 49 60 60 68 68 79 81 83 87 89 91 92 93
factor               : 36 37 38 39
func_def             : 9
function_call        : 14 47
if_stmt              : 7
input_call           : 15 48
list_access          : 46
list_add             : 11
list_decl            : 10
list_items           : 85
list_remove          : 12
list_tail            : 87 89
loop_stmt            : 8
param_list           : 73
param_tail           : 75 77
print_items          : 27 51
print_stmt           : 6
print_tail           : 29 31
program              : 0
relation             : 60
return_stmt          : 13
statement            : 2
statement_list       : 1 2 52 54 68 69 70 73
term                 : 33 34 35 36 37 38
type                 : 16 17
var_decl             : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . START statement_list END

    START           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> START . statement_list END
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . empty
    (94) empty -> .

    END             reduce using rule 94 (empty -> .)
    IDENTIFIER      reduce using rule 94 (empty -> .)
    PRINT           reduce using rule 94 (empty -> .)
    IF              reduce using rule 94 (empty -> .)
    FOR             reduce using rule 94 (empty -> .)
    WHILE           reduce using rule 94 (empty -> .)
    FUNCTION        reduce using rule 94 (empty -> .)
    LIST            reduce using rule 94 (empty -> .)
    ADD             reduce using rule 94 (empty -> .)
    REMOVE          reduce using rule 94 (empty -> .)
    RETURN          reduce using rule 94 (empty -> .)
    INPUT           reduce using rule 94 (empty -> .)
    INT_TYPE        reduce using rule 94 (empty -> .)
    FLOAT_TYPE      reduce using rule 94 (empty -> .)
    TEXT_TYPE       reduce using rule 94 (empty -> .)
    CHAR_TYPE       reduce using rule 94 (empty -> .)
    BOOL_TYPE       reduce using rule 94 (empty -> .)

    statement_list                 shift and go to state 3
    empty                          shift and go to state 4

state 3

    (1) program -> START statement_list . END
    (2) statement_list -> statement_list . statement
    (4) statement -> . var_decl
    (5) statement -> . assign_stmt
    (6) statement -> . print_stmt
    (7) statement -> . if_stmt
    (8) statement -> . loop_stmt
    (9) statement -> . func_def
    (10) statement -> . list_decl
    (11) statement -> . list_add
    (12) statement -> . list_remove
    (13) statement -> . return_stmt
    (14) statement -> . function_call
    (15) statement -> . input_call
    (16) var_decl -> . type IDENTIFIER assign_opt
    (17) var_decl -> . type IDENTIFIER ASSIGN error
    (25) assign_stmt -> . IDENTIFIER ASSIGN expr
    (26) assign_stmt -> . IDENTIFIER ASSIGN error
    (27) print_stmt -> . PRINT LPAREN print_items RPAREN
    (28) print_stmt -> . PRINT error
    (52) if_stmt -> . IF condition THEN statement_list else_part BLOCK_END
    (53) if_stmt -> . IF error BLOCK_END
    (68) loop_stmt -> . FOR IDENTIFIER ASSIGN expr FROM expr TO statement_list BLOCK_END
    (69) loop_stmt -> . WHILE condition statement_list BLOCK_END
    (70) loop_stmt -> . FOR statement_list WHILE condition BLOCK_END
    (71) loop_stmt -> . FOR error BLOCK_END
    (72) loop_stmt -> . WHILE error BLOCK_END
    (73) func_def -> . FUNCTION IDENTIFIER LPAREN param_list RPAREN statement_list BLOCK_END
    (74) func_def -> . FUNCTION error BLOCK_END
    (85) list_decl -> . LIST IDENTIFIER ASSIGN LBRACKET list_items RBRACKET
    (86) list_decl -> . LIST IDENTIFIER ASSIGN LBRACKET error RBRACKET
    (92) list_add -> . ADD IDENTIFIER expr
    (93) list_remove -> . REMOVE IDENTIFIER expr
    (79) return_stmt -> . RETURN expr
    (80) function_call -> . IDENTIFIER LPAREN arg_list RPAREN
    (51) input_call -> . INPUT LPAREN print_items RPAREN
    (18) type -> . INT_TYPE
    (19) type -> . FLOAT_TYPE
    (20) type -> . TEXT_TYPE
    (21) type -> . CHAR_TYPE
    (22) type -> . BOOL_TYPE

    END             shift and go to state 5
    IDENTIFIER      shift and go to state 20
    PRINT           shift and go to state 21
    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 24
    FUNCTION        shift and go to state 25
    LIST            shift and go to state 26
    ADD             shift and go to state 27
    REMOVE          shift and go to state 28
    RETURN          shift and go to state 29
    INPUT           shift and go to state 30
    INT_TYPE        shift and go to state 31
    FLOAT_TYPE      shift and go to state 32
    TEXT_TYPE       shift and go to state 33
    CHAR_TYPE       shift and go to state 34
    BOOL_TYPE       shift and go to state 35

    statement                      shift and go to state 6
    var_decl                       shift and go to state 7
    assign_stmt                    shift and go to state 8
    print_stmt                     shift and go to state 9
    if_stmt                        shift and go to state 10
    loop_stmt                      shift and go to state 11
    func_def                       shift and go to state 12
    list_decl                      shift and go to state 13
    list_add                       shift and go to state 14
    list_remove                    shift and go to state 15
    return_stmt                    shift and go to state 16
    function_call                  shift and go to state 17
    input_call                     shift and go to state 18
    type                           shift and go to state 19

state 4

    (3) statement_list -> empty .

    END             reduce using rule 3 (statement_list -> empty .)
    IDENTIFIER      reduce using rule 3 (statement_list -> empty .)
    PRINT           reduce using rule 3 (statement_list -> empty .)
    IF              reduce using rule 3 (statement_list -> empty .)
    FOR             reduce using rule 3 (statement_list -> empty .)
    WHILE           reduce using rule 3 (statement_list -> empty .)
    FUNCTION        reduce using rule 3 (statement_list -> empty .)
    LIST            reduce using rule 3 (statement_list -> empty .)
    ADD             reduce using rule 3 (statement_list -> empty .)
    REMOVE          reduce using rule 3 (statement_list -> empty .)
    RETURN          reduce using rule 3 (statement_list -> empty .)
    INPUT           reduce using rule 3 (statement_list -> empty .)
    INT_TYPE        reduce using rule 3 (statement_list -> empty .)
    FLOAT_TYPE      reduce using rule 3 (statement_list -> empty .)
    TEXT_TYPE       reduce using rule 3 (statement_list -> empty .)
    CHAR_TYPE       reduce using rule 3 (statement_list -> empty .)
    BOOL_TYPE       reduce using rule 3 (statement_list -> empty .)
    BLOCK_END       reduce using rule 3 (statement_list -> empty .)
    ELSE            reduce using rule 3 (statement_list -> empty .)


state 5

    (1) program -> START statement_list END .

    $end            reduce using rule 1 (program -> START statement_list END .)


state 6

    (2) statement_list -> statement_list statement .

    END             reduce using rule 2 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    FOR             reduce using rule 2 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement .)
    FUNCTION        reduce using rule 2 (statement_list -> statement_list statement .)
    LIST            reduce using rule 2 (statement_list -> statement_list statement .)
    ADD             reduce using rule 2 (statement_list -> statement_list statement .)
    REMOVE          reduce using rule 2 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 2 (statement_list -> statement_list statement .)
    INPUT           reduce using rule 2 (statement_list -> statement_list statement .)
    INT_TYPE        reduce using rule 2 (statement_list -> statement_list statement .)
    FLOAT_TYPE      reduce using rule 2 (statement_list -> statement_list statement .)
    TEXT_TYPE       reduce using rule 2 (statement_list -> statement_list statement .)
    CHAR_TYPE       reduce using rule 2 (statement_list -> statement_list statement .)
    BOOL_TYPE       reduce using rule 2 (statement_list -> statement_list statement .)
    BLOCK_END       reduce using rule 2 (statement_list -> statement_list statement .)
    ELSE            reduce using rule 2 (statement_list -> statement_list statement .)


state 7

    (4) statement -> var_decl .

    END             reduce using rule 4 (statement -> var_decl .)
    IDENTIFIER      reduce using rule 4 (statement -> var_decl .)
    PRINT           reduce using rule 4 (statement -> var_decl .)
    IF              reduce using rule 4 (statement -> var_decl .)
    FOR             reduce using rule 4 (statement -> var_decl .)
    WHILE           reduce using rule 4 (statement -> var_decl .)
    FUNCTION        reduce using rule 4 (statement -> var_decl .)
    LIST            reduce using rule 4 (statement -> var_decl .)
    ADD             reduce using rule 4 (statement -> var_decl .)
    REMOVE          reduce using rule 4 (statement -> var_decl .)
    RETURN          reduce using rule 4 (statement -> var_decl .)
    INPUT           reduce using rule 4 (statement -> var_decl .)
    INT_TYPE        reduce using rule 4 (statement -> var_decl .)
    FLOAT_TYPE      reduce using rule 4 (statement -> var_decl .)
    TEXT_TYPE       reduce using rule 4 (statement -> var_decl .)
    CHAR_TYPE       reduce using rule 4 (statement -> var_decl .)
    BOOL_TYPE       reduce using rule 4 (statement -> var_decl .)
    BLOCK_END       reduce using rule 4 (statement -> var_decl .)
    ELSE            reduce using rule 4 (statement -> var_decl .)


state 8

    (5) statement -> assign_stmt .

    END             reduce using rule 5 (statement -> assign_stmt .)
    IDENTIFIER      reduce using rule 5 (statement -> assign_stmt .)
    PRINT           reduce using rule 5 (statement -> assign_stmt .)
    IF              reduce using rule 5 (statement -> assign_stmt .)
    FOR             reduce using rule 5 (statement -> assign_stmt .)
    WHILE           reduce using rule 5 (statement -> assign_stmt .)
    FUNCTION        reduce using rule 5 (statement -> assign_stmt .)
    LIST            reduce using rule 5 (statement -> assign_stmt .)
    ADD             reduce using rule 5 (statement -> assign_stmt .)
    REMOVE          reduce using rule 5 (statement -> assign_stmt .)
    RETURN          reduce using rule 5 (statement -> assign_stmt .)
    INPUT           reduce using rule 5 (statement -> assign_stmt .)
    INT_TYPE        reduce using rule 5 (statement -> assign_stmt .)
    FLOAT_TYPE      reduce using rule 5 (statement -> assign_stmt .)
    TEXT_TYPE       reduce using rule 5 (statement -> assign_stmt .)
    CHAR_TYPE       reduce using rule 5 (statement -> assign_stmt .)
    BOOL_TYPE       reduce using rule 5 (statement -> assign_stmt .)
    BLOCK_END       reduce using rule 5 (statement -> assign_stmt .)
    ELSE            reduce using rule 5 (statement -> assign_stmt .)


state 9

    (6) statement -> print_stmt .

    END             reduce using rule 6 (statement -> print_stmt .)
    IDENTIFIER      reduce using rule 6 (statement -> print_stmt .)
    PRINT           reduce using rule 6 (statement -> print_stmt .)
    IF              reduce using rule 6 (statement -> print_stmt .)
    FOR             reduce using rule 6 (statement -> print_stmt .)
    WHILE           reduce using rule 6 (statement -> print_stmt .)
    FUNCTION        reduce using rule 6 (statement -> print_stmt .)
    LIST            reduce using rule 6 (statement -> print_stmt .)
    ADD             reduce using rule 6 (statement -> print_stmt .)
    REMOVE          reduce using rule 6 (statement -> print_stmt .)
    RETURN          reduce using rule 6 (statement -> print_stmt .)
    INPUT           reduce using rule 6 (statement -> print_stmt .)
    INT_TYPE        reduce using rule 6 (statement -> print_stmt .)
    FLOAT_TYPE      reduce using rule 6 (statement -> print_stmt .)
    TEXT_TYPE       reduce using rule 6 (statement -> print_stmt .)
    CHAR_TYPE       reduce using rule 6 (statement -> print_stmt .)
    BOOL_TYPE       reduce using rule 6 (statement -> print_stmt .)
    BLOCK_END       reduce using rule 6 (statement -> print_stmt .)
    ELSE            reduce using rule 6 (statement -> print_stmt .)


state 10

    (7) statement -> if_stmt .

    END             reduce using rule 7 (statement -> if_stmt .)
    IDENTIFIER      reduce using rule 7 (statement -> if_stmt .)
    PRINT           reduce using rule 7 (statement -> if_stmt .)
    IF              reduce using rule 7 (statement -> if_stmt .)
    FOR             reduce using rule 7 (statement -> if_stmt .)
    WHILE           reduce using rule 7 (statement -> if_stmt .)
    FUNCTION        reduce using rule 7 (statement -> if_stmt .)
    LIST            reduce using rule 7 (statement -> if_stmt .)
    ADD             reduce using rule 7 (statement -> if_stmt .)
    REMOVE          reduce using rule 7 (statement -> if_stmt .)
    RETURN          reduce using rule 7 (statement -> if_stmt .)
    INPUT           reduce using rule 7 (statement -> if_stmt .)
    INT_TYPE        reduce using rule 7 (statement -> if_stmt .)
    FLOAT_TYPE      reduce using rule 7 (statement -> if_stmt .)
    TEXT_TYPE       reduce using rule 7 (statement -> if_stmt .)
    CHAR_TYPE       reduce using rule 7 (statement -> if_stmt .)
    BOOL_TYPE       reduce using rule 7 (statement -> if_stmt .)
    BLOCK_END       reduce using rule 7 (statement -> if_stmt .)
    ELSE            reduce using rule 7 (statement -> if_stmt .)


state 11

    (8) statement -> loop_stmt .

    END             reduce using rule 8 (statement -> loop_stmt .)
    IDENTIFIER      reduce using rule 8 (statement -> loop_stmt .)
    PRINT           reduce using rule 8 (statement -> loop_stmt .)
    IF              reduce using rule 8 (statement -> loop_stmt .)
    FOR             reduce using rule 8 (statement -> loop_stmt .)
    WHILE           reduce using rule 8 (statement -> loop_stmt .)
    FUNCTION        reduce using rule 8 (statement -> loop_stmt .)
    LIST            reduce using rule 8 (statement -> loop_stmt .)
    ADD             reduce using rule 8 (statement -> loop_stmt .)
    REMOVE          reduce using rule 8 (statement -> loop_stmt .)
    RETURN          reduce using rule 8 (statement -> loop_stmt .)
    INPUT           reduce using rule 8 (statement -> loop_stmt .)
    INT_TYPE        reduce using rule 8 (statement -> loop_stmt .)
    FLOAT_TYPE      reduce using rule 8 (statement -> loop_stmt .)
    TEXT_TYPE       reduce using rule 8 (statement -> loop_stmt .)
    CHAR_TYPE       reduce using rule 8 (statement -> loop_stmt .)
    BOOL_TYPE       reduce using rule 8 (statement -> loop_stmt .)
    BLOCK_END       reduce using rule 8 (statement -> loop_stmt .)
    ELSE            reduce using rule 8 (statement -> loop_stmt .)


state 12

    (9) statement -> func_def .

    END             reduce using rule 9 (statement -> func_def .)
    IDENTIFIER      reduce using rule 9 (statement -> func_def .)
    PRINT           reduce using rule 9 (statement -> func_def .)
    IF              reduce using rule 9 (statement -> func_def .)
    FOR             reduce using rule 9 (statement -> func_def .)
    WHILE           reduce using rule 9 (statement -> func_def .)
    FUNCTION        reduce using rule 9 (statement -> func_def .)
    LIST            reduce using rule 9 (statement -> func_def .)
    ADD             reduce using rule 9 (statement -> func_def .)
    REMOVE          reduce using rule 9 (statement -> func_def .)
    RETURN          reduce using rule 9 (statement -> func_def .)
    INPUT           reduce using rule 9 (statement -> func_def .)
    INT_TYPE        reduce using rule 9 (statement -> func_def .)
    FLOAT_TYPE      reduce using rule 9 (statement -> func_def .)
    TEXT_TYPE       reduce using rule 9 (statement -> func_def .)
    CHAR_TYPE       reduce using rule 9 (statement -> func_def .)
    BOOL_TYPE       reduce using rule 9 (statement -> func_def .)
    BLOCK_END       reduce using rule 9 (statement -> func_def .)
    ELSE            reduce using rule 9 (statement -> func_def .)


state 13

    (10) statement -> list_decl .
